--- a/app/index.html
+++ b/app/index.html
@@ -32,14 +32,10 @@
 		<link rel="image_src" href="https://voident.github.io/img/thumbnail.jpg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:300,300italic,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="ghast.css">
 		<link rel="icon" href="https://voident.github.io/img/favicon.ico">
 
 		<style>
-      p {
-        font-family: 'Merriweather', serif;
-      }
 			img {
 			max-width: 100%;
 			}
@@ -331,7 +327,10 @@
 			            <a href="http://ghast.xyz">About</a>
 			          </span>
                 <span class="header-item">
-			            <a href="http://ghast.xyz">Code</a>
+			            <a href="http://ghast.xyz">Develop</a>
+			          </span>
+                <span class="header-item">
+			            <a href="http://ghast.xyz">Docs</a>
 			          </span>
 								<span class="header-item">
 			            <a href="http://blog.voident.xyz/">Blog</a>
@@ -354,10 +353,10 @@
 			        Ghast
 			      </h1>
 			      <h2 class="subtitle description">
-			        A terrifyingly simple CSS framework built with Flexbox
+			        A terrifyingly simple CSS framework
 			      </h2>
             <p class="hero-buttons">
-              <a href="#getting-started" class="button">Download</a>
+              <a href="#getting-started" class="button outline">Download</a>
             </p>
 			    </div>
 			  </div>
@@ -966,10 +965,14 @@
 
 			<footer class="footer">
 			  <div class="container">
-			    <div class="content is-centered">
+			    <div class="content text-centered">
 			      <p>
-			        Made with ♥ in Montreal, Canada by various peeps. Licensed under the <a target="blank" href="https://github.com/voident/ghast#license" title="MIT License">MIT License</a>.
+			        Built by
 			      </p>
+            <h1>IMPRIA</h1>
+            <p>
+              Licensed under the <a target="blank" href="https://github.com/voident/ghast#license" title="MIT License">MIT License</a>.
+            </p>
 			    </div>
 			  </div>
 			</footer>
