--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,7 @@
 			padding-bottom: 0;
 			padding-top: 0;
 			}
-			.column-demo {
+			.col-demo {
 			background: #d1d1d1;
 			display: block;
 			text-align: center;
@@ -173,7 +173,6 @@
 			}
       /* GitHub Theme */
       pre.prettyprint {
-        background: #FFFFFF;
         padding: 2.5rem 3rem;
         border: 1px solid #CCCCCC !important;
         -webkit-font-smoothing: antialiased;
@@ -324,7 +323,12 @@
 			      <div class="container">
 			        <div class="header-left">
                 <span class="header-item">
-			            <a href="http://ghast.xyz">About</a>
+                    <a class="dropdown" id="toggle" href="#!">About</a>
+                    <div id="myDropdown" class="dropdown-content">
+                      <a href="#">Link 1</a>
+                      <a href="#">Link 2</a>
+                      <a href="#">Link 3</a>
+                    </div>
 			          </span>
                 <span class="header-item">
 			            <a href="http://ghast.xyz">Develop</a>
@@ -419,7 +423,7 @@
 				<p>CSS3 introduces a few new units, including the <code>rem</code> unit, which stands for <em>"root em"</em>. The <code>rem</code> unit is relative to the font-size of the root element <code>&lt;html&gt;</code>. That means that we can define a single font size on the root element, and define all <code>rem</code> units to be a percentage of that. The typography has <code>font-size</code> defined as 1.6rem (16px) and <code>line-height</code> as 1.6 (24px). <strong>Ghast</strong> uses the <code>font-family</code> <a target="blank" href="https://www.google.com/fonts/specimen/Roboto" title="Roboto by Christian Robertson">Roboto</a>, created by <u>Christian Robertson</u>, and provided by Google.</p>
 				<div class="example">
 					<div class="row">
-						<div class="column">
+						<div class="col">
 							<h1>Heading<span class="heading-font-size"> <code>&lt;h1&gt;</code> 5.0rem (50px)</span></h1>
 							<h2>Heading<span class="heading-font-size"> <code>&lt;h2&gt;</code> 4.2rem (42px)</span></h2>
 							<h3>Heading<span class="heading-font-size"> <code>&lt;h3&gt;</code> 3.6rem (36px)</span></h3>
@@ -487,19 +491,19 @@
 				<h1 class="title">Lists</h1>
 				<p>The List is a very versatile and common way to display items. Ghast has three types of lists: The unordered list use <code>&lt;ul&gt;</code> element will be marked with a outline circles, the ordered list use <code>&lt;ol&gt;</code> element and your items will be marked with numbers, the description list use <code>&lt;dl&gt;</code> element and your items will not be marking, only spacings.</p>
 				<div class="row example">
-					<div class="column">
+					<div class="col">
 						<ul>
 							<li>Unordered list item 1</li>
 							<li>Unordered list item 2</li>
 						</ul>
 					</div>
-					<div class="column">
+					<div class="col">
 						<ol>
 							<li>Ordered list item 1</li>
 							<li>Ordered list item 2</li>
 						</ol>
 					</div>
-					<div class="column">
+					<div class="col">
 						<dl>
 							<dt>Description list item 1</dt>
 							<dd>Description list item 1.1</dd>
@@ -532,7 +536,7 @@
 				<p>The header is a responsive horizontal navigation component that can contain links, tabs, buttons, etc..</p>
 				<div class="example">
 					<div class="row">
-						<div class="column">
+						<div class="col">
 							<header class="header">
 							  <div class="container">
 							    <!-- Left side -->
@@ -763,18 +767,18 @@
 
 			<section class="container section" id="grids">
 				<h1 class="title">Grids</h1>
-				<p>The Grid is a fluid system with a max width of <code>70.0rem</code> <small>(1120px)</small>, that shrinks with the browser/device at smaller sizes. The max width can be changed with one line of CSS and all columns will resize accordingly. Ghast is different than most because of its use of the <strong>CSS Flexible Box Layout Module standard</strong>. The advantage is the simplicity, and we know that a functional code is very important for maintainability and scalability. Simply add columns you want in a row, and they'll evenly take up the available space. If you want three columns, add three columns, if you want five columns, add five columns. There is no restriction on number of columns, but we advise you to follow a design pattern of grid system. See more tips on best practices in the <a href="#tips" title="Tips">tips</a>.</p>
+				<p>The Grid is a fluid system with a max width of <code>70.0rem</code> <small>(1120px)</small>, that shrinks with the browser/device at smaller sizes. The max width can be changed with one line of CSS and all cols will resize accordingly. Ghast is different than most because of its use of the <strong>CSS Flexible Box Layout Module standard</strong>. The advantage is the simplicity, and we know that a functional code is very important for maintainability and scalability. Simply add cols you want in a row, and they'll evenly take up the available space. If you want three cols, add three cols, if you want five cols, add five cols. There is no restriction on number of cols, but we advise you to follow a design pattern of grid system. See more tips on best practices in the <a href="#tips" title="Tips">tips</a>.</p>
 				<div class="example">
 					<div class="container">
 						<div class="row">
-							<div class="column"><span class="column-demo">.column</span></div>
-							<div class="column"><span class="column-demo">.column</span></div>
-							<div class="column"><span class="column-demo">.column</span></div>
-							<div class="column"><span class="column-demo">.column</span></div>
+							<div class="col"><span class="col-demo">.col</span></div>
+							<div class="col"><span class="col-demo">.col</span></div>
+							<div class="col"><span class="col-demo">.col</span></div>
+							<div class="col"><span class="col-demo">.col</span></div>
 						</div>
 						<div class="row">
-							<div class="column"><span class="column-demo">.column</span></div>
-							<div class="column column-50 column-offset-25"><span class="column-demo">.column-50.column-offset-25</span></div>
+							<div class="col"><span class="col-demo">.col</span></div>
+							<div class="col col-50 col-offset-25"><span class="col-demo">.col-50.col-offset-25</span></div>
 						</div>
 					</div>
 				</div>
@@ -782,20 +786,20 @@
 <div class="container">
 
   <div class="row">
-    <div class="column">.column</div>
-    <div class="column">.column</div>
-    <div class="column">.column</div>
-    <div class="column">.column</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
+    <div class="col">.col</div>
   </div>
 
   <div class="row">
-    <div class="column">.column</div>
-    <div class="column column-50 column-offset-25">.column column-50 column-offset-25</div>
+    <div class="col">.col</div>
+    <div class="col col-50 col-offset-25">.col col-50 col-offset-25</div>
   </div>
 
 </div>
 
-<!-- Every .column added inside a .row will automatically receive an equal amount of the available area. --></code></pre>
+<!-- Every .col added inside a .row will automatically receive an equal amount of the available area. --></code></pre>
 			</section>
 
 			<section class="container section" id="codes">
@@ -871,22 +875,22 @@
 				<p><strong>Extending The Inheritances</strong></p>
 				<p>The style of an element can be defined in several different locations, which interact in a complex way. It is form of interaction makes CSS powerful, but it can make it confusing and difficult to debug.</p>
 				<div class="example row">
-					<div class="column">
+					<div class="col">
 						<a href="javascript: void(0)" class="button">Default .button</a>
 						<a href="javascript: void(0)" class="button outline">Outline .button</a>
 						<a href="javascript: void(0)" class="button clear">Clear .button</a>
 					</div>
-					<div class="column">
-						<a href="javascript: void(0)" class="button button-blue">.button-blue</a>
-						<a href="javascript: void(0)" class="button button-blue outline">.button-blue</a>
-						<a href="javascript: void(0)" class="button button-blue clear">.button-blue</a>
+					<div class="col">
+						<a href="javascript: void(0)" class="button primary">.primary</a>
+						<a href="javascript: void(0)" class="button primary outline">.primary</a>
+						<a href="javascript: void(0)" class="button primary clear">.primary</a>
 					</div>
-					<div class="column column-20">
+					<div class="col col-20">
 						<a href="javascript: void(0)" class="button button-small">.button-small</a>
 						<a href="javascript: void(0)" class="button button-small outline">.button-small</a>
 						<a href="javascript: void(0)" class="button button-small clear">.button-small</a>
 					</div>
-					<div class="column">
+					<div class="col">
 						<a href="javascript: void(0)" class="button button-large">.button-large</a>
 						<a href="javascript: void(0)" class="button button-large outline">.button-large</a>
 						<a href="javascript: void(0)" class="button button-large clear">.button-large</a>
@@ -992,6 +996,25 @@
 					$(this).toggleClass('is-active');
 					$menu.toggleClass('is-active');
 				});
+
+        $('#toggle').click(function(){
+            $('#myDropdown').addClass('show');
+        });
+
+        // Close the dropdown menu if the user clicks outside of it
+        window.onclick = function(event) {
+          if (!event.target.matches('.dropdown')) {
+
+            var dropdowns = document.getElementsByClassName("dropdown-content");
+            var i;
+            for (i = 0; i < dropdowns.length; i++) {
+              var openDropdown = dropdowns[i];
+              if (openDropdown.classList.contains('show')) {
+                openDropdown.classList.remove('show');
+              }
+            }
+          }
+        }
 
 			});
 		</script>
