im bad at commit msgs

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 		<link rel="image_src" href="https://voident.github.io/img/thumbnail.jpg">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
 		<link rel="stylesheet" href="ghast.css">
 		<link rel="icon" href="https://voident.github.io/img/favicon.ico">
 
@@ -176,8 +177,8 @@
 			}
       /* GitHub Theme */
       pre.prettyprint {
-        padding: 2.5rem 3rem;
-        border: 1px solid #CCCCCC !important;
+        border: none !important;
+        box-shadow: 0 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
         -webkit-font-smoothing: antialiased;
       }
 
@@ -989,7 +990,6 @@
 		</main>
 
 		<script src="https://code.jquery.com/jquery-2.2.0.min.js" charset="utf-8"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
 		<script src="https://voident.github.io/js/site.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function ($) {
