Form states, tweaks to buttons & switches

--- a/app/index.html
+++ b/app/index.html
@@ -633,9 +633,10 @@
 						<fieldset>
 							<label for="nameField">Name</label>
 							<input type="text" placeholder="Your name" id="nameField">
+              <input class="red" type="text" placeholder="Your name" id="nameField">
 							<label for="commentField">Comment</label>
 							<textarea placeholder="Are you a meme?" id="commentField"></textarea>
-							<div class="example-send-yourself-copy">
+							<div class="float-right">
 								<input type="checkbox" id="confirmField">
 								<label class="label-inline" for="confirmField">Send a copy to yourself</label>
 							</div>
@@ -666,24 +667,11 @@
           <label class="switch">
             <input type="checkbox" />
             <i class="switch-icon"></i> Send me emails with news and tips
-        </label>
+          </label>
 				</div>
 				<pre class="code prettyprint"><code class="code-content"><label class="switch">
-  <input type="checkbox" class="switch-input" checked>
-  <span class="switch-trough" data-on="On" data-off="Off"></span>
-  <span class="switch-handle"></span>
-</label>
-
-<label class="switch">
-  <input type="checkbox" class="switch-input" checked>
-  <span class="switch-trough" data-on="✔" data-off="✘"></span>
-  <span class="switch-handle"></span>
-</label>
-
-<label class="switch no-label">
-  <input type="checkbox" class="switch-input" checked>
-  <span class="switch-trough" data-on="On" data-off="Off"></span>
-  <span class="switch-handle"></span>
+  <input type="checkbox" />
+  <i class="switch-icon"></i> Send me emails with news and tips
 </label></code></pre>
 			</section>
 
