tooltips and shit

--- a/app/index.html
+++ b/app/index.html
@@ -458,7 +458,7 @@
 				<h1 class="title">Buttons</h1>
 				<p>The button, an essential part of any user experience. btns come in three basic styles in Ghast: The <code>&lt;btn&gt;</code> element has flat color by default, whereas <code>.btn-outline</code> has a simple outline around, and <code>.btn-clear</code> is entirely clear.</p>
 				<div class="col example">
-					<a class="btn" href="#!">Default btn</a>
+					<a class="btn tooltip" href="#!" data-tooltip="Hey this is a test!" data-tooltip-pos="top">Default btn</a>
 					<button class="btn outline">Outline btn</button>
 					<input class="btn clear" type="submit" value="Clear btn">
 				</div>
@@ -670,9 +670,9 @@
           </label>
 				</div>
 				<pre class="code prettyprint"><code class="code-content"><label class="switch">
-  <input type="checkbox" />
-  <i class="switch-icon"></i> Send me emails with news and tips
-</label></code></pre>
+    <input type="checkbox" />
+    <i class="switch-icon"></i> Send me emails with news and tips
+  </label></code></pre>
 			</section>
 
 			<section class="container section" id="tables">
