--- a/app/index.html
+++ b/app/index.html
@@ -378,6 +378,24 @@
 				</div>
 			</section>
 
+      <section class="container section" id="manualinstall">
+        <h1 class="title">Compile from source</h1>
+        <p>If you need a bit more control over how Ghast looks and behaves, you can also compile your own version from source by following these steps. Ghast uses <a href="https://gulpjs.com/">Gulp</a> to compile CSS, so make sure you have it installed properly for your system!</p>
+        <div class="example">
+          <p><strong>Grab the source from GitHub</strong></p>
+          <p>Clone the repository to a directory of your choosing.</p>
+          <p><pre class="code prettyprint"><code class="code-content">$ git clone https://github.com/impria/ghast.git</code></pre></p>
+          <p><strong>Install the dependencies</strong></p>
+          <p>NPM will install all the required dependencies for you as listed in the <code>package.json</code> file.</p>
+          <p><pre class="code prettyprint"><code class="code-content">$ npm install</code></pre></p>
+          <p><strong>Compile with Gulp</strong></p>
+          <p>Once all the dependencies are installed, run the build task to compile the CSS.</p>
+          <p><pre class="code prettyprint"><code class="code-content">$ gulp build</code></pre></p>
+          <p><strong>That's it!</strong></p>
+          <p>Your compiled files will be located in the <code>/css</code> directory</p>
+        </div>
+      </section>
+
 			<section class="container section" id="typography">
 				<h1 class="title">Typography</h1>
 				<p>CSS3 introduces a few new units, including the <code>rem</code> unit, which stands for <em>"root em"</em>. The <code>rem</code> unit is relative to the font-size of the root element <code>&lt;html&gt;</code>. That means that we can define a single font size on the root element, and define all <code>rem</code> units to be a percentage of that. The typography has <code>font-size</code> defined as 1.6rem (16px) and <code>line-height</code> as 1.65 (26.4px). <strong>Ghast</strong> uses system fonts by default to provide a uniform and integrated look.</p>
